[package]
name = "tetra_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raui = {path = "C:/Users/Lucy/programs/raui"}
tetra = "0.6.5"
raui-tetra-renderer = {path = "C:/Users/Lucy/programs/raui/raui-tetra-renderer"}